# memmgr

./: .gitignore  Makefile.in  README.md  config.h.in  configure  configure.ac
include/: Makefile.in  mem_mgr.h  memmgr.h
test/: Makefile.am  Makefile.in  point.cc  point.h  test.cc
